--- a/lab2/SuperTimer/app/src/main/res/values/strings.xml
+++ b/lab2/SuperTimer/app/src/main/res/values/strings.xml
@@ -2,23 +2,40 @@
     <string name="app_name">SuperTimer</string>
 
     <string-array name="languages">
-        <item>Русский</item>
-        <item>Английский</item>
+        <item>Russian</item>
+        <item>English</item>
     </string-array>
-    
+
     <string-array name="languages_val">
-        <item>RU</item>
-        <item>EN</item>
+        <item>ru</item>
+        <item>en</item>
     </string-array>
 
     <string-array name="font_sizes">
-        <item>Маленький</item>
-        <item>Большой</item>
+        <item>Small</item>
+        <item>Medium</item>
+        <item>Big</item>
     </string-array>
 
     <string-array name="font_sizes_val">
-        <item>16</item>
-        <item>30</item>
+        <item>1.0</item>
+        <item>1.15</item>
+        <item>1.25</item>
     </string-array>
+
+    <string name="title_activity_settings">Settings</string>
+    <string name="name">Name</string>
+    <string name="actionName">Action name</string>
+    <string name="add">Add</string>
+    <string name="start">Start</string>
+    <string name="timerName">Timer name</string>
+    <string name="chooseLang">Choose Language</string>
+    <string name="font">Font</string>
+    <string name="chooseFont">Choose font</string>
+    <string name="nightTheme">Night theme</string>
+    <string name="theme">Theme</string>
+    <string name="lang">Language</string>
+    <string name="timerEnd">Timer completed!</string>
+    <string name="actionEnd">completed!</string>
 
 </resources>
